css/html readability fixups

--- a/client/main.css
+++ b/client/main.css
@@ -88,11 +88,18 @@
  * User list setting
  */
  .userListItem {
-    line-height: 1.75;
+    line-height: 1.65;
+    padding: 3px;
+    border: 2px solid transparent;
 }
 
 .userListItem > a {
     display: none;
+}
+
+.userListItem:hover {
+    border: 2px solid #6A7487;
+    background-color: rgba(255,255,0,0.25);
 }
 
 .userListItem:hover > a {
